versioned_docs/version-1.18.x/wiki/excavar.mdx
# Excavar

import ProjectHeader from '@site/src/components/ProjectHeader';
import ToggleImage from "@site/src/components/ToggleImage";

<ProjectHeader slug="excavar" mcVersion="1.18" />

Mining in batches is possible and handy in some cases. This mod allows it!

---

## How to Use
1. Select the correct tool (can be disabled in config).
2. Press the key for mining multiple blocks (default: left `Alt`).
3. Hold the key and mine the targeted blocks.

The key is called `Multimine` in the category `Excavar`.

## Additional Features
As shown in this image, you'll see a preview of targeted blocks. This highlighting may be incorrect if you have an
enchantment like Unbreaking on your tool.

<ToggleImage src="/img/projects/excavar/highlighting.png" />

Additionally, you see the "Selected shape" is set to "Shapeless". Shapes can be added by other mods. Built-in the mod,
there are two different shapes:

- Shapeless
    - Searches for any block around it.
- Tunnel
    - Searches only in the direction you're facing the block at.

Switching the shape can be done by holding the Multimine button (default: left `Alt`) while sneaking and scrolling.

## Client Config

| Configuration          | Description                                                                                                                                                                    | Default Value |
|------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------|
| `onlyWhileSneaking`    | You can set if the multimine action can only be used while sneaking.                                                                                                           | `false`       |
| `preventToolsBreaking` | You can set if tools should be prevented from breaking. This will stop the mining if the tool reaches 1 durability.                                                            | `true`        |
| `enableOutline`        | You can set if the outline (see image) should be rendered.                                                                                                                     | `true`        |
| `considerDurability`   | You can choose if durability should be considered for highlighting. This causes the highlighting to stop after the item would break. May be inaccurate with some enchantments. | `false`       |

## Server Config
The server config file is stored in each world separately. You can find it after creating/joining the world in
`.minecraft/saves/<world name>/serverconfig/excavar-server.toml`. If you want to provide a default config for each
world (maybe for modpacks), put that file with changed values in `.minecraft/defaultconfigs/`.

- You can set the block limit for how many blocks should be mined at once - `blockLimit` (default: `16`).
- You can decide if the player needs a tool that affects block drops - `requiresCorrectTool` (default: `true`). The
  player will still be able to mine logs by hand, but stone will need a pickaxe (or other valid tool).
- You can decide if diagonal blocks (when using shapeless) are ignored - `disableDiagonals` (default: `false`). Below,
  you can see an example. Imagine the bedrock is the block you're targeting. The magenta glass would be the blocks which
  will be found additionally for that one specific block.

| Enabled (default)                        | Disabled                                      |
|------------------------------------------|-----------------------------------------------|
| ![](/img/projects/excavar/shapeless.png) | ![](/img/projects/excavar/easy_shapeless.png) |

- You can decide if the player is even able to change the shape described in [How to Use](#how-to-use) -
  `allowShapeSelection` (default: `true`).
- You can select the allowed blocks for mining - `allowedBlocks` (default: `ALL`). Allowed values include:
    - `ALL` - all blocks can be mined with Excavar
    - `ORES` - only ores (blocks with tag `#forge:ores`) can be mined with Excavar
    - `LOGS` - only logs (blocks with tag `#minecraft:logs`) can be mined with Excavar
    - `ORES_AND_LOGS` - `ORES` and `LOGS` combined
- You can define a list of tools that cannot be used with Excavar - `forbiddenItems`. For this, you can use `*` as a
  wildcard, for example `"minecraft:*_pickaxe"` would disable all vanilla pickaxes.

## Showcase
<iframe
width="451"
height="801"
src="https://www.youtube.com/embed/zww2hy1g2vU"
allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
allowFullScreen></iframe>
